--- a/ocmoni5/html/s7Edit4.html
+++ b/ocmoni5/html/s7Edit4.html
@@ -127,7 +127,7 @@
                 <span class="left">描述</span>
                 <span class="right">
                    <div class="form-group">
-                       <label for="inputEmail3" class="pure-u-1-8 control-label">起始日期</label>
+                       <label for="inputEmail3" class="pure-u-1-8 control-label">销售生效日期</label>
                        <div class="pure-u-1-4">
                            <input type="email" class="form-control input-sm datepicker" id="inputEmail3" placeholder="Email">
                        </div>
