--- a/ocmoni5/html/s7Edit4.html
+++ b/ocmoni5/html/s7Edit4.html
@@ -129,16 +129,16 @@
                    <div class="form-group">
                        <label for="inputEmail3" class="pure-u-1-8 control-label">销售生效日期</label>
                        <div class="pure-u-1-4">
-                           <input type="email" class="form-control input-sm datepicker" id="inputEmail3" placeholder="Email">
+                           <input type="text" id ="id1"  class="form-control input-sm datepicker" id="inputEmail3" placeholder="销售生效日期">
                        </div>
-                       <span class="glyphicon glyphicon-th datebox"></span>
+                       <label for="id1" class="glyphicon glyphicon-th datebox"></label>
                    </div>
                     <div class="form-group">
                         <label class="pure-u-1-8 control-label">销售截止日期</label>
                         <div class="pure-u-1-4">
-                            <input type="text" class="form-control input-sm datepicker"  placeholder="起始日期" >
+                            <input type="text" id="id2" class="form-control input-sm datepicker"  placeholder="销售截止日期" >
                         </div>
-                        <span class="glyphicon glyphicon-th datebox"></span>
+                        <label for="id2" class="glyphicon glyphicon-th datebox"></label>
                     </div>
                     <div class="form-group">
                         <label class="pure-u-1-8 control-label">服务套数</label>
@@ -195,7 +195,7 @@
                         <label class="pure-u-1-8 control-label">金额</label>
                         <div class="pure-u-1-2 control_right_content" >
                             <a href="">填写表格</a>
-                            <div class="table_layout" style ="width:560px">
+                            <div class="table_layout" style ="width:460px">
                                 <table>
                                     <thead>
                                     <tr> <th>销售地类型</th> <th>销售地代码</th><th>金额</th><th>货币类型</th></tr>
@@ -573,16 +573,16 @@
                     <div class="form-group">
                         <label class="pure-u-1-8 control-label">旅行开始日期</label>
                         <div class="pure-u-1-4">
-                            <input type="text" class="form-control input-sm datepicker"  >
+                            <input type="text" id="date3" class="form-control input-sm datepicker"  >
                         </div>
-                        <span class="glyphicon glyphicon-th datebox"></span>
+                        <label for="date3" class="glyphicon glyphicon-th datebox"></label>
                     </div>
                     <div class="form-group">
                         <label class="pure-u-1-8 control-label">旅行结束日期</label>
                         <div class="pure-u-1-4">
-                            <input type="text" class="form-control input-sm datepicker"  >
+                            <input id="date4" type="text" class="form-control input-sm datepicker"  >
                         </div>
-                        <span class="glyphicon glyphicon-th datebox"></span>
+                        <label for="date4" class="glyphicon glyphicon-th datebox"></label>
                     </div>
                     <div class="form-group">
                         <label class="pure-u-1-8 control-label">开始时刻</label>
@@ -708,10 +708,10 @@
                         <span class="text-info">航班</span>
                     </div>
                     <div class="form-group">
-                        <label class="pure-u-1-8 control-label">兑换信息</label>
+                        <label class="pure-u-1-12 control-label">兑换信息</label>
                         <div class="pure-u-1-4 control_right_content">
                             <a href="">填写表格</a>
-                            <div class="table_layout" style="width: 950px"  >
+                            <div class="table_layout" style="width: 870px">
                                 <table>
                                     <thead>
                                     <tr>
@@ -721,22 +721,22 @@
                                         <th colspan ="3">新票填开</th>
                                     </tr>
                                     <tr>
-                                        <th width ="127px">兑换舱位</th>
-                                        <th width ="58px">office</th>
-                                        <th width ="58px">IATA_NO</th>
-                                        <th width ="103px">DepartmentCode</th>
-                                        <th width ="162px">farebasis</th>
-                                        <th width ="130px">差价</th>
-                                        <th width ="143px">TourCode</th>
-                                        <th width ="138px">签注</th>
+                                        <th width ="127">兑换舱位</th>
+                                        <th width ="58">office</th>
+                                        <th width ="58">IATA_NO</th>
+                                        <th width ="103">DepartmentCode</th>
+                                        <th width ="152">farebasis</th>
+                                        <th width ="150">差价</th>
+                                        <th width ="143">TourCode</th>
+                                        <th width ="138">签注</th>
                                     </tr>
                                     </thead>
                                     <tbody>
                                     <tr class="selected_td">
                                         <td><input class ="form-control input-sm" type ="text" style="width:96%" placeholder="A/B/C/D" /></td>
-                                        <td><input type ="text" style="width: 96%" class ="form-control input-sm" /></td>
-                                        <td><input type ="text" style="width:96%" class ="form-control input-sm" /></td>
-                                        <td><input type ="text" style="width:96%" class ="form-control input-sm" /></td>
+                                        <td><input type ="text" style="width: 98%" class ="form-control input-sm" /></td>
+                                        <td><input type ="text" style="width:98%" class ="form-control input-sm" /></td>
+                                        <td><input type ="text" style="width:98%" class ="form-control input-sm" /></td>
                                         <td>
                                             <span style="display:inline-block;width: 46%">原始运价&nbsp;</span>
                                             <input type ="text" style="width:50%" class ="form-control input-sm"/>
@@ -746,14 +746,14 @@
                                             </div>
                                         </td>
                                         <td>
-                                            <select style ="width:96%" class ="form-control input-sm">
+                                            <select style ="width:98%" class ="form-control input-sm">
                                                 <option value="0">免差价</option>
                                                 <option value ="1">收差价,ET计算差额</option>
                                                 <option value ="2">收差价,自定义差额</option>
                                             </select>
                                             <div style="margin-top: 2px">
-                                                <input type ="text" style="width: 48%" class ="form-control input-sm"/>
-                                                <span style="float: right;width:48%;margin-right: 4px;">
+                                                <input type ="text" style="width: 47%" class ="form-control input-sm"/>
+                                                <span style="float: right;width:49%;margin-right: 2px;">
                                                     <select  class="form-control input-sm">
                                                         <option value ="">选择</option>
                                                         <option value ="CNY">CNY</option>
