--- a/ocmoni5/html/s7Edit4.html
+++ b/ocmoni5/html/s7Edit4.html
@@ -705,7 +705,10 @@
                 <span class="right">
                     <div class="form-group">
                         <label class="pure-u-1-8 control-label">允许兑换的服务</label>
-                        <span class="text-info">航班</span>
+                        <div class="pure-u-1-4 control_right_content">
+                            <span class="text-info ">航班</span>
+                        </div>
+
                     </div>
                     <div class="form-group">
                         <label class="pure-u-1-12 control-label">兑换信息</label>
