--- a/ocmoni5/html/s7Query.html
+++ b/ocmoni5/html/s7Query.html
@@ -166,15 +166,13 @@
         <button class="btn btn-default btn-sm">截止</button>
     </div>
     <span class="clearfix"></span>
-    <div class="panel panel-info">
+    <div class="panel panel-default">
         <div class="panel-heading">
             <h3 class="panel-title">
-                    <span>
-                        升舱组描述>升舱子组描述>
-                        <span class="checkbox-inline">
-                            <input  id ="a7" type="checkbox"> <label for="a7">[0BJ]升舱</label>
-                        </span>
-                    </span>
+                <span class="checkbox-inline">
+                    <input  id ="a7" type="checkbox"><label for="a7">全选</label>
+                </span>
+                <span>升舱组描述>升舱子组描述>[0BJ]升舱</span>
             </h3>
         </div>
         <div class="panel-body">
