--- a/ocmoni5/html/s7Edit2.html
+++ b/ocmoni5/html/s7Edit2.html
@@ -82,13 +82,13 @@
                    <div class="pure-control-group">
                        <label>销售生效日期</label>
                        <input type="text" class="pure-u-1-4 datepicker"  placeholder="起始日期" >
-                       <span class="glyphicon glyphicon-th datebox"></span>
+                       <span class="glyphicon glyphicon-th iconfont_box"></span>
                        <i class="glyphicon glyphicon-asterisk red_star"></i>
                    </div>
                     <div class="pure-control-group">
                         <label>销售截止日期</label>
                         <input type="text" class="pure-u-1-4 datepicker"  placeholder="起始日期" >
-                        <span class="glyphicon glyphicon-th datebox"></span>
+                        <span class="glyphicon glyphicon-th iconfont_box"></span>
                     </div>
                     <div class="pure-control-group">
                         <label>服务套数</label>
