--- a/ocmoni5/html/s7Query.html
+++ b/ocmoni5/html/s7Query.html
@@ -73,10 +73,10 @@
                 <div class="form-group">
                     <label class="marginR5">销售日期</label>
                     <input type="text" class="form-control input-sm datepicker"  placeholder="起始日期" style="width: 100px">
-                    <span class="glyphicon glyphicon-th datebox"></span>
+                    <span class="glyphicon glyphicon-th iconfont_box"></span>
                     <span class="marginL15"></span>
                     <input type="text" class="form-control input-sm datepicker"  placeholder="结束日期" style="width: 100px">
-                    <span class="glyphicon glyphicon-th datebox"></span>
+                    <span class="glyphicon glyphicon-th iconfont_box"></span>
                 </div>
 
                 <div class="checkbox marginLR15">
