--- a/ocmoni5/html/s7Edit4.html
+++ b/ocmoni5/html/s7Edit4.html
@@ -58,7 +58,7 @@
 <!--主编辑区域 start-->
 <div class="container-fluid main_content">
     <form class="form-horizontal">
-        <div class="data_section clearfix">
+        <div class="data_section">
             <div class="title_layout">
                 <span class="left">1.选择附加服务</span>
                 <span style="margin-right:40px;"></span><span class="serviceInputSpan right"></span>
