--- a/ocmoni5/html/s7Edit4.html
+++ b/ocmoni5/html/s7Edit4.html
@@ -133,7 +133,7 @@
                        <div class="pure-u-1-4">
                            <input type="text" id ="id1"  class="form-control input-sm datepicker" id="inputEmail3" placeholder="销售生效日期">
                        </div>
-                       <label for="id1" class="glyphicon glyphicon-th datebox"></label>
+                       <label for="id1" class="glyphicon glyphicon-th iconfont_box"></label>
                        <span class="input_error_tip">这里是错误提示信息</span>
                    </div>
                     <div class="form-group">
@@ -141,7 +141,8 @@
                         <div class="pure-u-1-4">
                             <input type="text" id="id2" class="form-control input-sm datepicker"  placeholder="销售截止日期" >
                         </div>
-                        <label for="id2" class="glyphicon glyphicon-th datebox"></label>
+                        <label for="id2" class="glyphicon glyphicon-th iconfont_box"></label>
+
                     </div>
                     <div class="form-group">
                         <label class="pure-u-1-8 control-label">服务套数</label>
@@ -198,13 +199,15 @@
                         <label class="pure-u-1-8 control-label">金额</label>
                         <div class="pure-u-1-2 " >
                             <div class="table_control">
-                                <a href="" class="marginR15">填写表格</a>
-                                <label class ="text-info">复用表号:</label>
-                                <input type="text" class="common_input" id="autocomplete" style="width: 100px"/>
-                                <span class="iconfont_box">
-                                    <i class="glyphicon glyphicon-search gray "></i>
+                                <a href="#">填写表格</a>
+                                <span class="table_reuse">
+                                    <label class ="text-info">复用表号:</label>
+                                    <input type="text" class="common_input" id="autocomplete" style="width: 100px"/>
+                                    <span class="iconfont_box">
+                                        <i class="glyphicon glyphicon-search gray"></i>
+                                    </span>
+                                    <span class ="text-danger myhand">自定义表格</span>
                                 </span>
-                                <span class ="text-danger">自定义表格</span>
                             </div>
 
                             <div class="table_layout" style ="width:460px">
@@ -488,7 +491,7 @@
                                 <option value="">2</option>
                             </select>
                         </div>
-                        <i class="glyphicon glyphicon-asterisk red_star"></i>
+                        <i class="glyphicon glyphicon-asterisk red input_tip"></i>
                     </div>
                     <div class="form-group">
                         <label class="pure-u-1-8 control-label">指定区域</label>
@@ -587,28 +590,28 @@
                         <div class="pure-u-1-4">
                             <input type="text" id="date3" class="form-control input-sm datepicker"  >
                         </div>
-                        <label for="date3" class="glyphicon glyphicon-th datebox"></label>
+                        <label for="date3" class="glyphicon glyphicon-th iconfont_box"></label>
                     </div>
                     <div class="form-group">
                         <label class="pure-u-1-8 control-label">旅行结束日期</label>
                         <div class="pure-u-1-4">
                             <input id="date4" type="text" class="form-control input-sm datepicker"  >
                         </div>
-                        <label for="date4" class="glyphicon glyphicon-th datebox"></label>
+                        <label for="date4" class="glyphicon glyphicon-th iconfont_box"></label>
                     </div>
                     <div class="form-group">
                         <label class="pure-u-1-8 control-label">开始时刻</label>
                         <div class="pure-u-1-4">
                             <input type="text" class="form-control input-sm datepicker"  >
                         </div>
-                        <span class="glyphicon glyphicon-th datebox"></span>
+                        <span class="glyphicon glyphicon-th iconfont_box"></span>
                     </div>
                     <div class="form-group">
                         <label class="pure-u-1-8 control-label">结束时刻</label>
                         <div class="pure-u-1-4">
                             <input type="text" class="form-control input-sm datepicker"  >
                         </div>
-                        <span class="glyphicon glyphicon-th datebox"></span>
+                        <span class="glyphicon glyphicon-th iconfont_box"></span>
                     </div>
                     <div class="form-group">
                         <label class="pure-u-1-8 control-label">应用范围</label>
