table 中的input样式调整

--- a/ocmoni5/html/s7Edit4.html
+++ b/ocmoni5/html/s7Edit4.html
@@ -217,10 +217,10 @@
                                     </thead>
                                     <tbody>
                                     <tr>
-                                        <td><select name="" class="form-control input-sm" ><option value="">选择</option><option value="">国家</option></select></td>
-                                        <td><input type="text" class="form-control input-sm"></td>
-                                        <td><input type="text" class="form-control input-sm"> </td>
-                                        <td> <input type="text" class="form-control input-sm"></td>
+                                        <td><select name="" class="common_input" ><option value="">选择</option><option value="">国家</option></select></td>
+                                        <td><input type="text" class="common_input"></td>
+                                        <td><input type="text" class="common_input"> </td>
+                                        <td> <input type="text" class="common_input"></td>
                                     </tr>
                                     </tbody>
                                 </table>
@@ -394,7 +394,7 @@
                                     </thead>
                                     <tbody>
                                     <tr>
-                                        <td> <input type="text" class="form-control input-sm"></td>
+                                        <td> <input type="text" class="common_input"></td>
                                     </tr>
                                     </tbody>
                                 </table>
@@ -429,14 +429,14 @@
                                     </thead>
                                     <tbody>
                                     <tr>
-                                        <td> <input type="text" class="form-control input-sm" style="width:93%;"></td>
-                                        <td> <input type="text" class="form-control input-sm" style="width:93%;"></td>
-                                        <td> <input type="text" class="form-control input-sm" style="width:93%;"></td>
-                                        <td> <input type="text" class="form-control input-sm" style="width:93%;"></td>
-                                        <td> <input type="text" class="form-control input-sm" style="width:93%;"></td>
-                                        <td> <input type="text" class="form-control input-sm" style="width:93%;"></td>
-                                        <td> <input type="text" class="form-control input-sm" style="width:93%;"></td>
-                                        <td> <input type="text" class="form-control input-sm" style="width:93%;"></td>
+                                        <td> <input type="text" class="common_input" style="width:93%;"></td>
+                                        <td> <input type="text" class="common_input" style="width:93%;"></td>
+                                        <td> <input type="text" class="common_input" style="width:93%;"></td>
+                                        <td> <input type="text" class="common_input" style="width:93%;"></td>
+                                        <td> <input type="text" class="common_input" style="width:93%;"></td>
+                                        <td> <input type="text" class="common_input" style="width:93%;"></td>
+                                        <td> <input type="text" class="common_input" style="width:93%;"></td>
+                                        <td> <input type="text" class="common_input" style="width:93%;"></td>
                                     </tr>
                                     </tbody>
                                 </table>
@@ -654,9 +654,9 @@
                                     </thead>
                                     <tbody>
                                     <tr>
-                                        <td> <input type="text" class="form-control input-sm"></td>
-                                        <td> <input type="text" class="form-control input-sm"></td>
-                                        <td> <input type="text" class="form-control input-sm"></td>
+                                        <td> <input type="text" class="common_input"></td>
+                                        <td> <input type="text" class="common_input"></td>
+                                        <td> <input type="text" class="common_input"></td>
                                     </tr>
                                     </tbody>
                                 </table>
@@ -751,28 +751,28 @@
                                     </thead>
                                     <tbody>
                                     <tr class="selected_td">
-                                        <td><input class ="form-control input-sm" type ="text" style="width:96%" placeholder="A/B/C/D" /></td>
-                                        <td><input type ="text" style="width: 98%" class ="form-control input-sm" /></td>
-                                        <td><input type ="text" style="width:98%" class ="form-control input-sm" /></td>
-                                        <td><input type ="text" style="width:98%" class ="form-control input-sm" /></td>
+                                        <td><input class ="common_input" type ="text" style="width:96%" placeholder="A/B/C/D" /></td>
+                                        <td><input type ="text" style="width: 98%" class ="common_input" /></td>
+                                        <td><input type ="text" style="width:98%" class ="common_input" /></td>
+                                        <td><input type ="text" style="width:98%" class ="common_input" /></td>
                                         <td>
                                             <span style="display:inline-block;width: 46%">原始运价&nbsp;</span>
-                                            <input type ="text" style="width:50%" class ="form-control input-sm"/>
+                                            <input type ="text" style="width:50%" class ="common_input"/>
                                             <div style="padding-top: 2px">
                                                 <span style="display:inline-block;width: 46%">新票面</span>
-                                                <input type ="text" style="width:50%" class ="form-control input-sm"/>
+                                                <input type ="text" style="width:50%" class ="common_input"/>
                                             </div>
                                         </td>
                                         <td>
-                                            <select style ="width:98%" class ="form-control input-sm">
+                                            <select style ="width:98%" class ="common_input">
                                                 <option value="0">免差价</option>
                                                 <option value ="1">收差价,ET计算差额</option>
                                                 <option value ="2">收差价,自定义差额</option>
                                             </select>
                                             <div style="margin-top: 2px">
-                                                <input type ="text" style="width: 47%" class ="form-control input-sm"/>
+                                                <input type ="text" style="width: 47%" class ="common_input"/>
                                                 <span style="float: right;width:49%;margin-right: 2px;">
-                                                    <select  class="form-control input-sm">
+                                                    <select  class="common_input">
                                                         <option value ="">选择</option>
                                                         <option value ="CNY">CNY</option>
                                                         <option value ="USD">USD</option>
@@ -787,12 +787,12 @@
                                         <td>
                                             <a href="javascript:void(0)" >编辑TourCode文本</a><br>
                                             <span style="display:inline-block;width: 48%">附加规则</span>
-                                            <input type ="text" style ="width:48%" class="form-control input-sm"  placeholder ="如:123"/>
+                                            <input type ="text" style ="width:48%" class="common_input"  placeholder ="如:123"/>
                                         </td>
                                         <td>
                                             <a href="javascript:void(0)" >编辑备注文本</a><br>
                                             <span style="display:inline-block;width: 48%">附加规则</span>
-                                            <input type ="text" style="width:48%" class="form-control input-sm" placeholder ="如:123"/>
+                                            <input type ="text" style="width:48%" class="common_input" placeholder ="如:123"/>
                                         </td>
                                     </tr>
                                     </tbody>
