--- a/ocmoni5/html/s7Edit4.html
+++ b/ocmoni5/html/s7Edit4.html
@@ -220,10 +220,14 @@
                                         <td><select name="" class="common_input" ><option value="">选择</option><option value="">国家</option></select></td>
                                         <td><input type="text" class="common_input"></td>
                                         <td><input type="text" class="common_input"> </td>
-                                        <td> <input type="text" class="common_input"></td>
+                                        <td><input type="text" class="common_input"></td>
                                     </tr>
                                     </tbody>
                                 </table>
+                                <div class="table_footer">
+                                    <button class="btn btn-success btn-sm">增加一行</button>
+                                    <button class="btn btn-default btn-sm">删除一行</button>
+                                </div>
                             </div>
                         </div>
                     </div>
