目录结构调整

--- a/ocmoni5/html/s7Edit2.html
+++ b/ocmoni5/html/s7Edit2.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="../../bower_components/pure/grids.css"/>
     <link rel="stylesheet" href="../../bower_components/pure/forms.css"/>
     <link rel="stylesheet" href="../../bower_components/bootstrap-datepicker/dist/css/bootstrap-datepicker.css"/>
-    <link rel="stylesheet" href="../css/common.css">
-    <link rel="stylesheet" href="../css/s7Edit2.css">
+    <link rel="stylesheet" href="../styles/common.css">
+    <link rel="stylesheet" href="../styles/s7Edit2.css">
 </head>
 <body>
 <!--导航 start-->
