--- a/ocmoni5/html/s7Edit4.html
+++ b/ocmoni5/html/s7Edit4.html
@@ -6,10 +6,11 @@
     <link rel="stylesheet" href="../../bower_components/bootstrap/dist/css/bootstrap.css"/>
     <link rel="stylesheet" href="../../bower_components/pure/grids.css"/>
     <link rel="stylesheet" href="../../bower_components/bootstrap-datepicker/dist/css/bootstrap-datepicker.css"/>
-    <link rel="stylesheet" href="../css/jquery.autocomplete.css"/>
-    <link rel="stylesheet" href="../css/common.css">
-    <link rel="stylesheet" href="../css/s7Edit4.css">
+    <link rel="stylesheet" href="../styles/jquery.autocomplete.css"/>
+    <link rel="stylesheet" href="../styles/common.css">
+    <link rel="stylesheet" href="../styles/s7Edit4.css">
     <link rel="stylesheet" href="../lib/iconfont/iconfont.css"/>
+    <link rel="stylesheet" href="../lib/tui-dialog/"/>
 </head>
 <body>
 <!--导航 start-->
@@ -46,8 +47,8 @@
         <span>费用&nbsp;|</span>
         <span>规则</span>
         <span class="pull-right marginR15" style="padding-top: 2px">
-            <button type="submit" class="btn btn-default btn-sm">保存</button>
-            <button type="submit" class="btn btn-default btn-sm btn-success">保存并发布</button>
+            <button type="submit" id ="saveBtn" class="btn btn-default btn-sm">保存</button>
+            <button type="submit" id ="saveAndPublishBtn" class="btn btn-default btn-sm btn-success">保存并发布</button>
         </span>
     </div>
     <!--query section end-->
