--- a/ocmoni5/html/s7Edit4_bac.html
+++ b/ocmoni5/html/s7Edit4_bac.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="../../bower_components/bootstrap/dist/css/bootstrap.css"/>
     <link rel="stylesheet" href="../../bower_components/pure/grids.css"/>
     <link rel="stylesheet" href="../../bower_components/bootstrap-datepicker/dist/css/bootstrap-datepicker.css"/>
-    <link rel="stylesheet" href="../css/common.css">
-    <link rel="stylesheet" href="../css/s7Edit4.css">
+    <link rel="stylesheet" href="../styles/common.css">
+    <link rel="stylesheet" href="../styles/s7Edit4.css">
 </head>
 <body>
 <!--导航 start-->
