把tui-dialog加入进来

--- a/ocmoni5/html/s7Edit4.html
+++ b/ocmoni5/html/s7Edit4.html
@@ -6,11 +6,11 @@
     <link rel="stylesheet" href="../../bower_components/bootstrap/dist/css/bootstrap.css"/>
     <link rel="stylesheet" href="../../bower_components/pure/grids.css"/>
     <link rel="stylesheet" href="../../bower_components/bootstrap-datepicker/dist/css/bootstrap-datepicker.css"/>
-    <link rel="stylesheet" href="../styles/jquery.autocomplete.css"/>
-    <link rel="stylesheet" href="../styles/common.css">
-    <link rel="stylesheet" href="../styles/s7Edit4.css">
+    <link rel="stylesheet" href="../styles/css/jquery.autocomplete.css"/>
+    <link rel="stylesheet" href="../styles/css/common.css">
+    <link rel="stylesheet" href="../styles/css/s7Edit4.css">
+    <link rel="stylesheet" href="../styles/css/tui_dialog.css"/>
     <link rel="stylesheet" href="../lib/iconfont/iconfont.css"/>
-    <link rel="stylesheet" href="../lib/tui-dialog/"/>
 </head>
 <body>
 <!--导航 start-->
@@ -906,6 +906,9 @@
 
 
 <script type="text/javascript" src="../../bower_components/jquery/dist/jquery.js"></script>
+<script type="text/javascript" src="../lib/tui-core/tui_core.js"></script>
+<script type="text/javascript" src="../lib/tui-drag/tui_drag.js"></script>
+<script type="text/javascript" src="../lib/tui-dialog/tui_dialog.js"></script>
 <script type="text/javascript" src="../../bower_components/bootstrap/dist/js/bootstrap.js"></script>
 <script type="text/javascript" src="../../bower_components/bootstrap-datepicker/dist/js/bootstrap-datepicker.js"></script>
 <script type="text/javascript" src="../../bower_components/bootstrap-datepicker/js/locales/bootstrap-datepicker.zh-CN.js"></script>
