--- a/ocmoni5/html/s7Edit.html
+++ b/ocmoni5/html/s7Edit.html
@@ -5,8 +5,8 @@
     <title>s7编译页面</title>
     <link rel="stylesheet" href="../../bower_components/bootstrap/dist/css/bootstrap.css"/>
     <link rel="stylesheet" href="../../bower_components/bootstrap-datepicker/dist/css/bootstrap-datepicker.css"/>
-    <link rel="stylesheet" href="../styles/common.css">
-    <link rel="stylesheet" href="../styles/s7Edit.css">
+    <link rel="stylesheet" href="../styles/css/common.css">
+    <link rel="stylesheet" href="../styles/css/s7Edit.css">
 </head>
 <body>
 <!--导航 start-->
