--- a/ocmoni6/html/s7Edit.html
+++ b/ocmoni6/html/s7Edit.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="../../bower_components/bootstrap/dist/css/bootstrap.css"/>
     <link rel="stylesheet" href="../../bower_components/pure/grids.css"/>
     <link rel="stylesheet" href="../styles/css/jquery.autocomplete.css"/>
+    <link rel="stylesheet" href="../styles/css/jquery_ui.datepicker-modify.css"/>
+    <link rel="stylesheet" href="../styles/css/jquery-ui-timepicker-addon.css"/>
     <link rel="stylesheet" href="../styles/css/common.css">
     <link rel="stylesheet" href="../styles/css/s7Edit4.css">
     <link rel="stylesheet" href="../styles/css/tui_dialog.css"/>
@@ -910,6 +912,9 @@
 <script type="text/javascript" src="../lib/tui-core/tui_core.js"></script>
 <script type="text/javascript" src="../lib/tui-drag/tui_drag.js"></script>
 <script type="text/javascript" src="../lib/tui-dialog/tui_dialog.js"></script>
+<script type="text/javascript" src="../lib/jq-datepicker/jquery_ui.js"></script>
+<script type="text/javascript" src="../lib/jq-datepicker/jquery_ui.datepicker-zh-CN.js"></script>
+<script type="text/javascript" src="../lib/jq-timepicker/jquery-timepicker-addon.js"></script>
 <script type="text/javascript" src="../../bower_components/bootstrap/dist/js/bootstrap.js"></script>
 <script type="application/javascript" src="../../bower_components/devbridge-autocomplete/dist/jquery.autocomplete.js"></script>
 <script type="text/javascript" src="../js/s7Edit.js"></script>
