--- a/ocmoni6/html/s7Edit.html
+++ b/ocmoni6/html/s7Edit.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../styles/css/jquery_ui.datepicker-modify.css"/>
     <link rel="stylesheet" href="../styles/css/jquery-ui-timepicker-addon.css"/>
     <link rel="stylesheet" href="../styles/css/common.css">
-    <link rel="stylesheet" href="../styles/css/s7Edit4.css">
+    <link rel="stylesheet" href="../styles/css/s7Edit.css">
     <link rel="stylesheet" href="../styles/css/tui_dialog.css"/>
     <link rel="stylesheet" href="../lib/iconfont/iconfont.css"/>
 </head>
@@ -63,7 +63,8 @@
         <div class="data_section">
             <div class="title_layout">
                 <span class="left">1.选择附加服务</span>
-                <span style="margin-right:40px;"></span><span class="serviceInputSpan right"></span>
+                <span style="margin-right:40px;"></span>
+                <span class="serviceInputSpan right"></span>
             </div>
             <div class="content_layout">
                 <!-- 附加服务选择框-->
